# grainfetch

./: .gitignore  Cargo.toml  README.md  flake.nix
flake/: formatter.nix  package.nix  shell.nix
src/: grains.rs  main.rs  printmgr.rs
