[package]
name = "grainfetch"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
crossterm = "0.28.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
